{
    "name": "InputSystem",
    "maps": [
        {
            "name": "drum",
            "id": "da79f4af-eb47-4da8-8cde-62379cf5c483",
            "actions": [
                {
                    "name": "Toggle",
                    "type": "Button",
                    "id": "dfd64d7e-1c48-4240-b721-7caaf1c08c96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "370b1617-3c96-4379-8640-eff97b18acc2",
                    "path": "<OculusTouchController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Toggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}